[package]
name = "rusty_moves"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[dependencies]
tokio = { version = "1", features = ["macros", "net", "rt", "rt-multi-thread", "time"] }
rand = "0.9"
anyhow = "1.0"
regex = "1.11.1"

[profile.release-prod]
inherits = "release"
lto = "fat"
strip = true
codegen-units = 1
panic = "abort"
